# review_analysis_filluminate

./: .gitignore  README.md  main.py  pyproject.toml  run_weekly.py
00tutor00/: 06_2_리뷰텍스트_전처리_ver2.ipynb  07_6_리뷰텍스트_중복처리_step2_final_v2.ipynb  07_6_리뷰텍스트_중복처리_step2_final_v2_month제외.ipynb  step3a_local_extract_embedding_input.ipynb
all/: 01_1_crawling.ipynb  01_2_month_crawling.ipynb  03_eda_hw.ipynb  04_1_review_text_preprocessing.ipynb  notepad.ipynb  민수-cleaned파일압축테스트.ipynb  전처리 통합(수정).ipynb  전처리 통합.ipynb  전처리 통합_v1(0423).ipynb  전처리 통합_v1(0424).ipynb  크롤링(0424).ipynb
data_ghactions/: embedding_input.parquet  errors.csv  weekly_new.csv  weekly_new_step1.csv  weekly_new_step2_dedup.csv  weekly_new_step2_dropped.csv
kms/: 01_crawling.ipynb  02_1_basic_preprocessing.ipynb  07_6_리뷰텍스트_중복처리_step2_final_v2.ipynb  07_6_리뷰텍스트_중복처리_step2_final_v3.ipynb  EDA.ipynb  crawling.ipynb  notepad.ipynb  step3a_local_extract_embedding_input.ipynb  with gem.ipynb  리뷰텍스트.ipynb  리뷰텍스트_전처리_ver2.ipynb  리뷰텍스트_중복처리(step2).ipynb  리뷰텍스트_중복처리_step2_ver2.ipynb  아우터 데이터 확인.ipynb  아우터 크롤링.ipynb  임계값_분석.ipynb  전처리 통합.ipynb  전처리 통합_v1(0424).ipynb  전처리.ipynb  크롤링.ipynb  크롤링_수정(before).ipynb  크롤링_수정.ipynb
lyr/: 무신사 전처리아이디어.ipynb  무신사products전처리.ipynb
phr/: preprocessing_과정.ipynb  preprocessing_적용간단코드.ipynb  리뷰텍스트_전처리_중복처리.ipynb  리뷰텍스트_중복처리(step2)_v2.ipynb
src/: crawl.py  dedup.py  preprocess.py  text_preprocess.py
yhg/: 00_crawling_v3.ipynb  00_crawling_v4.ipynb  01_integration_check.ipynb  01_overview.ipynb  02_preprocessing.ipynb  03_preprocessing_part1.ipynb  03_preprocessing_part2.ipynb  (+24 more)
(+47 files in other folders)
