[project]
name = "review-analysis-filluminate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "pingouin",
    "scikit-posthocs",
    "xgboost",
    "sqlalchemy>=2.0.49",
    "pymysql>=1.1.2",
]
